kubernetes/apps/calendar-agent/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: calendar-agent
  labels:
    miak-it.com/graph-calendar-agent: "true"
